# pystereogene

./: LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.py
pystereogene/: __init__.py  _bin.py  _runner.py  bin_track.py  build.py  chrom.py  confounder.py  correlate.py  exceptions.py  model.py  params.py  parse_genes.py  parsing.py  project.py  smooth.py
pystereogene/_vendor/src/: Binner  Confounder  FourierCorr.cpp  ParseGenes  Projector  Smoother  bTrack.cpp  confounder.cpp  data.cpp  kernel.cpp  main_Bin.cpp  main_SG.cpp  main_conf.cpp  main_parseGenes.cpp  main_proj.cpp  main_smooth.cpp  out.cpp  outLC.cpp  parsePrm.cpp  parsePrm.h  projector.cpp  sg_util.h  sg_utils.cpp  trackPrepare.cpp  util.cpp  util.h
pystereogene/tests/: __init__.py  conftest.py  test_correlate.py  test_parsing.py
